# pepcy-site

./: .gitignore  README.md
markdowns/: 404.md  about.md  resume.md
markdowns/acgn/: 2022年漫画总结.md  Pepcy-的追补番列表.md
markdowns/algo/: 2-SAT学习笔记.md  2016-Multi-University-Training-Contest-8-I-Rikka-with-Subset.md  2018-ICPC-南京站游记.md  2019-CCPC-Final-游记.md  2019-CCPC-厦门游记.md  2019-ICPC-EC-Final-游记.md  2019-ICPC-上海游记.md  2019-ICPC-南京游记.md  BSGS学习笔记.md  BZOJ-1013-JSOI-2008-球形空间产生器.md  BZOJ-1017-JSOI-2008-魔兽地图DotR.md  BZOJ-1019-SHOI-2008-汉诺塔.md  BZOJ-1020-SHOI-2008-安全的航线.md  BZOJ-1021-SHOI-2008-循环的债务.md  BZOJ-1027-JSOI-2007-合金.md  BZOJ-1028-JSOI-2007-麻将.md  BZOJ-1030-JSOI-2007-文本生成器.md  BZOJ-1038-ZJOI-2008-瞭望塔.md  BZOJ-1040-ZJOI-2008-骑士.md  BZOJ-1042-HAOI-2008-硬币购物.md  BZOJ-1043-HAOI-2008-下落的圆盘.md  BZOJ-1047-HAOI-2007-理想的正方形.md  BZOJ-1049-HAOI-2006-数字序列.md  BZOJ-1050-HAOI-2006-旅行comf.md  BZOJ-1055-HAOI-2008-玩具取名.md  BZOJ-1057-ZJOI-2007-棋盘制作.md  BZOJ-1061-NOI-2008-志愿者招募.md  BZOJ-1064-NOI-2008-假面舞会.md  BZOJ-1066-SCOI-2007-蜥蜴.md  BZOJ-1067-SCOI-2007-降雨量.md  BZOJ-1069-SCOI-2007-最大土地面积.md  BZOJ-1072-SCOI-2007-排列.md  BZOJ-1076-SCOI-2008-奖励关.md  BZOJ-1086-SCOI-2005-王室联邦.md  BZOJ-1089-SCOI-2003-严格n元树.md  BZOJ-1096-ZJOI-2007-仓库建设.md  BZOJ-1150-CTSC-2007-数据备份.md  BZOJ-1185-HNOI-2007-最小矩形覆盖.md  (+139 more)
pepcy-site-frontend/: Cargo.toml  index.html
pepcy-site-frontend/src/: about.rs  acgn.rs  algo.rs  home.rs  main.rs  note.rs  resume.rs  utils.rs
pepcy-site-frontend/style/: style.css
pepcy-site-mdpre/: Cargo.toml
pepcy-site-mdpre/src/: blog.rs  main.rs  new.rs  single.rs  utils.rs
(+21 files in other folders)
