[package]
name = "pepcy-site-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
web-sys = { version =  "0.3", features = ["Element", "DomTokenList"] }
reqwasm = "0.4"
gloo-console = "0.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
chrono = "0.4"
percent-encoding = "2.1"