[package]
name = "pepcy-site-mdpre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.12"
katex = { version = "0.4", default-features = false, features = ["duktape"] }
lazy_static = "1.4"
regex = "1.5"
lazy-regex = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
percent-encoding = "2.1"